# EDCTRANSLATION-PUBLIC

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  INSTALL.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  docker-compose.local.yml  docker-compose.prod.yml  index.html  pyproject.toml  release-notes-v0.1.0.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
ansible/: README.md  ansible.cfg
docs/: 00-SYSTEM-BLUEPRINT.md  01-TECH-STACK-DNA.md  02-QUICKSTART-5-MINUTE-SUCCESS.md  03-INFORMATION-FLOWS.md  04-USE-CASES.md  05-DEPLOYMENT.md  05-INTERACTIVE-WALKTHROUGH.md  06-CONFIGURATION-REFERENCE.md  07-CONTRACTS-REFERENCE.md  08-PROVIDER-OPERATIONS.md  09-BATCH-TEXT-WORKFLOWS.md  10-TROUBLESHOOTING.md  11-SECURITY-AND-RELEASE-READINESS.md  API-REFERENCE.md  DEPLOYMENT-DECISION-GUIDE.md  EXECUTIVE-SUMMARY.md  README.md  WHITE-PAPER.md
edc_translation/: __init__.py  api.py  auth.py  auth_middleware.py  cli.py  client.py  contracts.py  custody.py  errors.py  governance.py  http_json.py  jobs.py  kafka_backend.py  language_catalog.py  language_id.py  llm_live.py  mcp.py  mcp_http.py  mock_openai.py  model_registry.py  models.py  postgres_backend.py  provenance.py  providers.py  quality.py  release_readiness.py  review.py  routing.py  service.py  stores.py  text_batch.py  worker.py
presentation/: architecture.html  executive-summary.html  index.html  slides.html  technical-brief.html  use-cases.html  white-paper.html
schemas/: document-bundle-v1.schema.json  translation-bundle-v1.schema.json
tests/: test_api.py  test_auth.py  test_auth_middleware.py  test_cli_mcp.py  test_contracts.py  test_e2e_demo.py  test_engine_metadata.py  test_engines.py  test_job_queue.py  test_kafka_backend.py  test_llm_live.py  test_local_ct2_adapters.py  test_local_ct2_opus.py  test_mcp_http.py  test_models.py  test_packaging_surfaces.py  test_postgres_backend.py  test_product_surfaces.py  (+8 more)
(+78 files in other folders)
